@@ -1,3 +1,7 @@
+2008-12-20  Stephane Delcroix  <sdelcroix@novell.con>
+
+	* glib/Timeout.cs: map AddSeconds ().
+
 2008-12-19  Mike Kestner  <mkestner@novell.com>
 
 	* generator/BoxedGen.cs: don't generate glue dependencies.
